--- a/src/laboratorio1/App.form
+++ b/src/laboratorio1/App.form
@@ -66,6 +66,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Nombres"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnNombreActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnLibros">
       <Properties>
